added average math and reading scores by grade.

--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -1044,6 +1044,136 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 65,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "    Student ID     student_name gender grade        school_name  \\\n0            0     Paul Bradley      M   9th  Huang High School   \n4            4       Bonnie Ray      F   9th  Huang High School   \n5            5    Bryan Miranda      M   9th  Huang High School   \n12          12  Brittney Walker      F   9th  Huang High School   \n13          13     William Long      M   9th  Huang High School   \n\n    reading_score  math_score  School ID      type  size   budget  \n0              66          79          0  District  2917  1910635  \n4              97          84          0  District  2917  1910635  \n5              94          94          0  District  2917  1910635  \n12             64          79          0  District  2917  1910635  \n13             71          79          0  District  2917  1910635  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Student ID</th>\n      <th>student_name</th>\n      <th>gender</th>\n      <th>grade</th>\n      <th>school_name</th>\n      <th>reading_score</th>\n      <th>math_score</th>\n      <th>School ID</th>\n      <th>type</th>\n      <th>size</th>\n      <th>budget</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>Paul Bradley</td>\n      <td>M</td>\n      <td>9th</td>\n      <td>Huang High School</td>\n      <td>66</td>\n      <td>79</td>\n      <td>0</td>\n      <td>District</td>\n      <td>2917</td>\n      <td>1910635</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>Bonnie Ray</td>\n      <td>F</td>\n      <td>9th</td>\n      <td>Huang High School</td>\n      <td>97</td>\n      <td>84</td>\n      <td>0</td>\n      <td>District</td>\n      <td>2917</td>\n      <td>1910635</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>5</td>\n      <td>Bryan Miranda</td>\n      <td>M</td>\n      <td>9th</td>\n      <td>Huang High School</td>\n      <td>94</td>\n      <td>94</td>\n      <td>0</td>\n      <td>District</td>\n      <td>2917</td>\n      <td>1910635</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>12</td>\n      <td>Brittney Walker</td>\n      <td>F</td>\n      <td>9th</td>\n      <td>Huang High School</td>\n      <td>64</td>\n      <td>79</td>\n      <td>0</td>\n      <td>District</td>\n      <td>2917</td>\n      <td>1910635</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>13</td>\n      <td>William Long</td>\n      <td>M</td>\n      <td>9th</td>\n      <td>Huang High School</td>\n      <td>71</td>\n      <td>79</td>\n      <td>0</td>\n      <td>District</td>\n      <td>2917</td>\n      <td>1910635</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create grade level DataFrames.\n",
+    "ninth = school_data_complete_df[(school_data_complete_df[\"grade\"] == \"9th\")]\n",
+    "tenth = school_data_complete_df[(school_data_complete_df[\"grade\"] == \"10th\")]\n",
+    "eleventh = school_data_complete_df[(school_data_complete_df[\"grade\"] == \"11th\")]\n",
+    "twelfth = school_data_complete_df[(school_data_complete_df[\"grade\"] == \"12th\")]\n",
+    "\n",
+    "ninth.head()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "school_name\nBailey High School       80.912451\nCabrera High School      84.287958\nFigueroa High School     81.384863\nFord High School         80.662338\nGriffin High School      84.013699\nHernandez High School    80.857143\nHolden High School       84.698795\nHuang High School        80.305983\nJohnson High School      81.227564\nPena High School         84.591160\nRodriguez High School    80.376426\nShelton High School      82.781671\nThomas High School       83.831361\nWilson High School       84.317673\nWright High School       84.073171\nName: reading_score, dtype: float64"
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ninth_math = ninth.groupby([\"school_name\"]).mean()[\"math_score\"]\n",
+    "ninth_reading = ninth.groupby([\"school_name\"]).mean()[\"reading_score\"]\n",
+    "\n",
+    "tenth_math = tenth.groupby([\"school_name\"]).mean()[\"math_score\"]\n",
+    "tenth_reading = tenth.groupby([\"school_name\"]).mean()[\"reading_score\"]\n",
+    "\n",
+    "eleventh_math = eleventh.groupby([\"school_name\"]).mean()[\"math_score\"]\n",
+    "eleventh_reading = eleventh.groupby([\"school_name\"]).mean()[\"reading_score\"]\n",
+    "\n",
+    "twelfth_math = twelfth.groupby([\"school_name\"]).mean()[\"math_score\"]\n",
+    "twelfth_reading = twelfth.groupby([\"school_name\"]).mean()[\"reading_score\"]\n",
+    "\n",
+    "twelfth_reading"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                       9th  10th  11th  12th\nBailey High School    77.1  77.0  77.5  76.5\nCabrera High School   83.1  83.2  82.8  83.3\nFigueroa High School  76.4  76.5  76.9  77.2\nFord High School      77.4  77.7  76.9  76.2\nGriffin High School   82.0  84.2  83.8  83.4",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>9th</th>\n      <th>10th</th>\n      <th>11th</th>\n      <th>12th</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Bailey High School</th>\n      <td>77.1</td>\n      <td>77.0</td>\n      <td>77.5</td>\n      <td>76.5</td>\n    </tr>\n    <tr>\n      <th>Cabrera High School</th>\n      <td>83.1</td>\n      <td>83.2</td>\n      <td>82.8</td>\n      <td>83.3</td>\n    </tr>\n    <tr>\n      <th>Figueroa High School</th>\n      <td>76.4</td>\n      <td>76.5</td>\n      <td>76.9</td>\n      <td>77.2</td>\n    </tr>\n    <tr>\n      <th>Ford High School</th>\n      <td>77.4</td>\n      <td>77.7</td>\n      <td>76.9</td>\n      <td>76.2</td>\n    </tr>\n    <tr>\n      <th>Griffin High School</th>\n      <td>82.0</td>\n      <td>84.2</td>\n      <td>83.8</td>\n      <td>83.4</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create DataFrames for average math and reading scores for each school by grade.\n",
+    "math_scores_by_grade = pd.DataFrame({\n",
+    "    \"9th\": ninth_math.map(\"{:.1f}\".format),\n",
+    "    \"10th\": tenth_math.map(\"{:.1f}\".format),\n",
+    "    \"11th\": eleventh_math.map(\"{:.1f}\".format),\n",
+    "    \"12th\": twelfth_math.map(\"{:.1f}\".format),\n",
+    "})\n",
+    "\n",
+    "math_scores_by_grade.index.name = None\n",
+    "math_scores_by_grade.head()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                       9th  10th  11th  12th\nBailey High School    81.3  80.9  80.9  80.9\nCabrera High School   83.7  84.3  83.8  84.3\nFigueroa High School  81.2  81.4  80.6  81.4\nFord High School      80.6  81.3  80.4  80.7\nGriffin High School   83.4  83.7  84.3  84.0",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>9th</th>\n      <th>10th</th>\n      <th>11th</th>\n      <th>12th</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Bailey High School</th>\n      <td>81.3</td>\n      <td>80.9</td>\n      <td>80.9</td>\n      <td>80.9</td>\n    </tr>\n    <tr>\n      <th>Cabrera High School</th>\n      <td>83.7</td>\n      <td>84.3</td>\n      <td>83.8</td>\n      <td>84.3</td>\n    </tr>\n    <tr>\n      <th>Figueroa High School</th>\n      <td>81.2</td>\n      <td>81.4</td>\n      <td>80.6</td>\n      <td>81.4</td>\n    </tr>\n    <tr>\n      <th>Ford High School</th>\n      <td>80.6</td>\n      <td>81.3</td>\n      <td>80.4</td>\n      <td>80.7</td>\n    </tr>\n    <tr>\n      <th>Griffin High School</th>\n      <td>83.4</td>\n      <td>83.7</td>\n      <td>84.3</td>\n      <td>84.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reading_scores_by_grade = pd.DataFrame({\n",
+    "    \"9th\": ninth_reading.map(\"{:.1f}\".format),\n",
+    "    \"10th\": tenth_reading.map(\"{:.1f}\".format),\n",
+    "    \"11th\": eleventh_reading.map(\"{:.1f}\".format),\n",
+    "    \"12th\": twelfth_reading.map(\"{:.1f}\".format),\n",
+    "})\n",
+    "\n",
+    "reading_scores_by_grade.index.name = None\n",
+    "reading_scores_by_grade.head()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
