--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -1314,7 +1314,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "count      15.000000\nmean     2611.333333\nstd      1420.915282\nmin       427.000000\n25%      1698.000000\n50%      2283.000000\n75%      3474.000000\nmax      4976.000000\nName: school_name, dtype: float64"
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "per_school_counts.describe()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "school_name\nSmall (<1000)         2\nMedium (1000-1999)    5\nLarge (2000-5000)     8\nName: school_name, dtype: int64"
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Establish bins.\n",
+    "size_bins = [0, 999, 1999, 5000]\n",
+    "size_group_names = [\"Small (<1000)\", \"Medium (1000-1999)\", \"Large (2000-5000)\"]\n",
+    "\n",
+    "per_school_counts.groupby(pd.cut(per_school_counts, size_bins, labels=size_group_names)).count()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                      School Type Total Students Total School Budget  \\\nBailey High School       District          4,976       $3,124,928.00   \nCabrera High School       Charter          1,858       $1,081,356.00   \nFigueroa High School     District          2,949       $1,884,411.00   \nFord High School         District          2,739       $1,763,916.00   \nGriffin High School       Charter          1,468         $917,500.00   \nHernandez High School    District          4,635       $3,022,020.00   \nHolden High School        Charter            427         $248,087.00   \nHuang High School        District          2,917       $1,910,635.00   \nJohnson High School      District          4,761       $3,094,650.00   \nPena High School          Charter            962         $585,858.00   \nRodriguez High School    District          3,999       $2,547,363.00   \nShelton High School       Charter          1,761       $1,056,600.00   \nThomas High School        Charter          1,635       $1,043,130.00   \nWilson High School        Charter          2,283       $1,319,574.00   \nWright High School        Charter          1,800       $1,049,400.00   \n\n                      Per Student Budget  Average Math Score  \\\nBailey High School               $628.00           77.048432   \nCabrera High School              $582.00           83.061895   \nFigueroa High School             $639.00           76.711767   \nFord High School                 $644.00           77.102592   \nGriffin High School              $625.00           83.351499   \nHernandez High School            $652.00           77.289752   \nHolden High School               $581.00           83.803279   \nHuang High School                $655.00           76.629414   \nJohnson High School              $650.00           77.072464   \nPena High School                 $609.00           83.839917   \nRodriguez High School            $637.00           76.842711   \nShelton High School              $600.00           83.359455   \nThomas High School               $638.00           83.418349   \nWilson High School               $578.00           83.274201   \nWright High School               $583.00           83.682222   \n\n                       Average Reading Score  % Passing Math  \\\nBailey High School                 81.033963       66.680064   \nCabrera High School                83.975780       94.133477   \nFigueroa High School               81.158020       65.988471   \nFord High School                   80.746258       68.309602   \nGriffin High School                83.816757       93.392371   \nHernandez High School              80.934412       66.752967   \nHolden High School                 83.814988       92.505855   \nHuang High School                  81.182722       65.683922   \nJohnson High School                80.966394       66.057551   \nPena High School                   84.044699       94.594595   \nRodriguez High School              80.744686       66.366592   \nShelton High School                83.725724       93.867121   \nThomas High School                 83.848930       93.272171   \nWilson High School                 83.989488       93.867718   \nWright High School                 83.955000       93.333333   \n\n                       % Passing Reading  % Overall Passing  \\\nBailey High School             81.933280          54.642283   \nCabrera High School            97.039828          91.334769   \nFigueroa High School           80.739234          53.204476   \nFord High School               79.299014          54.289887   \nGriffin High School            97.138965          90.599455   \nHernandez High School          80.862999          53.527508   \nHolden High School             96.252927          89.227166   \nHuang High School              81.316421          53.513884   \nJohnson High School            81.222432          53.539172   \nPena High School               95.945946          90.540541   \nRodriguez High School          80.220055          52.988247   \nShelton High School            95.854628          89.892107   \nThomas High School             97.308869          90.948012   \nWilson High School             96.539641          90.582567   \nWright High School             96.611111          90.333333   \n\n                      Spending Ranges (Per Student)         Size Ranges  \\\nBailey High School                         $586-630   Large (2000-5000)   \nCabrera High School                           <$586  Medium (1000-1999)   \nFigueroa High School                       $631-645   Large (2000-5000)   \nFord High School                           $631-645   Large (2000-5000)   \nGriffin High School                        $586-630  Medium (1000-1999)   \nHernandez High School                      $646-675   Large (2000-5000)   \nHolden High School                            <$586       Small (<1000)   \nHuang High School                          $646-675   Large (2000-5000)   \nJohnson High School                        $646-675   Large (2000-5000)   \nPena High School                           $586-630       Small (<1000)   \nRodriguez High School                      $631-645   Large (2000-5000)   \nShelton High School                        $586-630  Medium (1000-1999)   \nThomas High School                         $631-645  Medium (1000-1999)   \nWilson High School                            <$586   Large (2000-5000)   \nWright High School                            <$586  Medium (1000-1999)   \n\n                              School Size  \nBailey High School      Large (2000-5000)  \nCabrera High School    Medium (1000-1999)  \nFigueroa High School    Large (2000-5000)  \nFord High School        Large (2000-5000)  \nGriffin High School    Medium (1000-1999)  \nHernandez High School   Large (2000-5000)  \nHolden High School          Small (<1000)  \nHuang High School       Large (2000-5000)  \nJohnson High School     Large (2000-5000)  \nPena High School            Small (<1000)  \nRodriguez High School   Large (2000-5000)  \nShelton High School    Medium (1000-1999)  \nThomas High School     Medium (1000-1999)  \nWilson High School      Large (2000-5000)  \nWright High School     Medium (1000-1999)  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>School Type</th>\n      <th>Total Students</th>\n      <th>Total School Budget</th>\n      <th>Per Student Budget</th>\n      <th>Average Math Score</th>\n      <th>Average Reading Score</th>\n      <th>% Passing Math</th>\n      <th>% Passing Reading</th>\n      <th>% Overall Passing</th>\n      <th>Spending Ranges (Per Student)</th>\n      <th>Size Ranges</th>\n      <th>School Size</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Bailey High School</th>\n      <td>District</td>\n      <td>4,976</td>\n      <td>$3,124,928.00</td>\n      <td>$628.00</td>\n      <td>77.048432</td>\n      <td>81.033963</td>\n      <td>66.680064</td>\n      <td>81.933280</td>\n      <td>54.642283</td>\n      <td>$586-630</td>\n      <td>Large (2000-5000)</td>\n      <td>Large (2000-5000)</td>\n    </tr>\n    <tr>\n      <th>Cabrera High School</th>\n      <td>Charter</td>\n      <td>1,858</td>\n      <td>$1,081,356.00</td>\n      <td>$582.00</td>\n      <td>83.061895</td>\n      <td>83.975780</td>\n      <td>94.133477</td>\n      <td>97.039828</td>\n      <td>91.334769</td>\n      <td>&lt;$586</td>\n      <td>Medium (1000-1999)</td>\n      <td>Medium (1000-1999)</td>\n    </tr>\n    <tr>\n      <th>Figueroa High School</th>\n      <td>District</td>\n      <td>2,949</td>\n      <td>$1,884,411.00</td>\n      <td>$639.00</td>\n      <td>76.711767</td>\n      <td>81.158020</td>\n      <td>65.988471</td>\n      <td>80.739234</td>\n      <td>53.204476</td>\n      <td>$631-645</td>\n      <td>Large (2000-5000)</td>\n      <td>Large (2000-5000)</td>\n    </tr>\n    <tr>\n      <th>Ford High School</th>\n      <td>District</td>\n      <td>2,739</td>\n      <td>$1,763,916.00</td>\n      <td>$644.00</td>\n      <td>77.102592</td>\n      <td>80.746258</td>\n      <td>68.309602</td>\n      <td>79.299014</td>\n      <td>54.289887</td>\n      <td>$631-645</td>\n      <td>Large (2000-5000)</td>\n      <td>Large (2000-5000)</td>\n    </tr>\n    <tr>\n      <th>Griffin High School</th>\n      <td>Charter</td>\n      <td>1,468</td>\n      <td>$917,500.00</td>\n      <td>$625.00</td>\n      <td>83.351499</td>\n      <td>83.816757</td>\n      <td>93.392371</td>\n      <td>97.138965</td>\n      <td>90.599455</td>\n      <td>$586-630</td>\n      <td>Medium (1000-1999)</td>\n      <td>Medium (1000-1999)</td>\n    </tr>\n    <tr>\n      <th>Hernandez High School</th>\n      <td>District</td>\n      <td>4,635</td>\n      <td>$3,022,020.00</td>\n      <td>$652.00</td>\n      <td>77.289752</td>\n      <td>80.934412</td>\n      <td>66.752967</td>\n      <td>80.862999</td>\n      <td>53.527508</td>\n      <td>$646-675</td>\n      <td>Large (2000-5000)</td>\n      <td>Large (2000-5000)</td>\n    </tr>\n    <tr>\n      <th>Holden High School</th>\n      <td>Charter</td>\n      <td>427</td>\n      <td>$248,087.00</td>\n      <td>$581.00</td>\n      <td>83.803279</td>\n      <td>83.814988</td>\n      <td>92.505855</td>\n      <td>96.252927</td>\n      <td>89.227166</td>\n      <td>&lt;$586</td>\n      <td>Small (&lt;1000)</td>\n      <td>Small (&lt;1000)</td>\n    </tr>\n    <tr>\n      <th>Huang High School</th>\n      <td>District</td>\n      <td>2,917</td>\n      <td>$1,910,635.00</td>\n      <td>$655.00</td>\n      <td>76.629414</td>\n      <td>81.182722</td>\n      <td>65.683922</td>\n      <td>81.316421</td>\n      <td>53.513884</td>\n      <td>$646-675</td>\n      <td>Large (2000-5000)</td>\n      <td>Large (2000-5000)</td>\n    </tr>\n    <tr>\n      <th>Johnson High School</th>\n      <td>District</td>\n      <td>4,761</td>\n      <td>$3,094,650.00</td>\n      <td>$650.00</td>\n      <td>77.072464</td>\n      <td>80.966394</td>\n      <td>66.057551</td>\n      <td>81.222432</td>\n      <td>53.539172</td>\n      <td>$646-675</td>\n      <td>Large (2000-5000)</td>\n      <td>Large (2000-5000)</td>\n    </tr>\n    <tr>\n      <th>Pena High School</th>\n      <td>Charter</td>\n      <td>962</td>\n      <td>$585,858.00</td>\n      <td>$609.00</td>\n      <td>83.839917</td>\n      <td>84.044699</td>\n      <td>94.594595</td>\n      <td>95.945946</td>\n      <td>90.540541</td>\n      <td>$586-630</td>\n      <td>Small (&lt;1000)</td>\n      <td>Small (&lt;1000)</td>\n    </tr>\n    <tr>\n      <th>Rodriguez High School</th>\n      <td>District</td>\n      <td>3,999</td>\n      <td>$2,547,363.00</td>\n      <td>$637.00</td>\n      <td>76.842711</td>\n      <td>80.744686</td>\n      <td>66.366592</td>\n      <td>80.220055</td>\n      <td>52.988247</td>\n      <td>$631-645</td>\n      <td>Large (2000-5000)</td>\n      <td>Large (2000-5000)</td>\n    </tr>\n    <tr>\n      <th>Shelton High School</th>\n      <td>Charter</td>\n      <td>1,761</td>\n      <td>$1,056,600.00</td>\n      <td>$600.00</td>\n      <td>83.359455</td>\n      <td>83.725724</td>\n      <td>93.867121</td>\n      <td>95.854628</td>\n      <td>89.892107</td>\n      <td>$586-630</td>\n      <td>Medium (1000-1999)</td>\n      <td>Medium (1000-1999)</td>\n    </tr>\n    <tr>\n      <th>Thomas High School</th>\n      <td>Charter</td>\n      <td>1,635</td>\n      <td>$1,043,130.00</td>\n      <td>$638.00</td>\n      <td>83.418349</td>\n      <td>83.848930</td>\n      <td>93.272171</td>\n      <td>97.308869</td>\n      <td>90.948012</td>\n      <td>$631-645</td>\n      <td>Medium (1000-1999)</td>\n      <td>Medium (1000-1999)</td>\n    </tr>\n    <tr>\n      <th>Wilson High School</th>\n      <td>Charter</td>\n      <td>2,283</td>\n      <td>$1,319,574.00</td>\n      <td>$578.00</td>\n      <td>83.274201</td>\n      <td>83.989488</td>\n      <td>93.867718</td>\n      <td>96.539641</td>\n      <td>90.582567</td>\n      <td>&lt;$586</td>\n      <td>Large (2000-5000)</td>\n      <td>Large (2000-5000)</td>\n    </tr>\n    <tr>\n      <th>Wright High School</th>\n      <td>Charter</td>\n      <td>1,800</td>\n      <td>$1,049,400.00</td>\n      <td>$583.00</td>\n      <td>83.682222</td>\n      <td>83.955000</td>\n      <td>93.333333</td>\n      <td>96.611111</td>\n      <td>90.333333</td>\n      <td>&lt;$586</td>\n      <td>Medium (1000-1999)</td>\n      <td>Medium (1000-1999)</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Categorize by school size.\n",
+    "per_school_summary_df[\"School Size\"] = pd.cut(per_school_counts, size_bins, labels=size_group_names)\n",
+    "per_school_summary_df"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                   Average Math Score Average Reading Score % Passing Math  \\\nSchool Size                                                                  \nSmall (<1000)                    83.8                  83.9             94   \nMedium (1000-1999)               83.4                  83.9             94   \nLarge (2000-5000)                77.7                  81.3             70   \n\n                   % Passing Reading % Overall Passing  \nSchool Size                                             \nSmall (<1000)                     96                90  \nMedium (1000-1999)                97                91  \nLarge (2000-5000)                 83                58  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Average Math Score</th>\n      <th>Average Reading Score</th>\n      <th>% Passing Math</th>\n      <th>% Passing Reading</th>\n      <th>% Overall Passing</th>\n    </tr>\n    <tr>\n      <th>School Size</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Small (&lt;1000)</th>\n      <td>83.8</td>\n      <td>83.9</td>\n      <td>94</td>\n      <td>96</td>\n      <td>90</td>\n    </tr>\n    <tr>\n      <th>Medium (1000-1999)</th>\n      <td>83.4</td>\n      <td>83.9</td>\n      <td>94</td>\n      <td>97</td>\n      <td>91</td>\n    </tr>\n    <tr>\n      <th>Large (2000-5000)</th>\n      <td>77.7</td>\n      <td>81.3</td>\n      <td>70</td>\n      <td>83</td>\n      <td>58</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create and format Size Summary DataFrame.\n",
+    "size_summary_df = pd.DataFrame({\n",
+    "    \"Average Math Score\" : per_school_summary_df.groupby([\"School Size\"]).mean()[\"Average Math Score\"].map(\"{:.1f}\".format),\n",
+    "    \"Average Reading Score\" : per_school_summary_df.groupby([\"School Size\"]).mean()[\"Average Reading Score\"].map(\"{:.1f}\".format),\n",
+    "    \"% Passing Math\" : per_school_summary_df.groupby([\"School Size\"]).mean()[\"% Passing Math\"].map(\"{:.0f}\".format),\n",
+    "    \"% Passing Reading\" : per_school_summary_df.groupby([\"School Size\"]).mean()[\"% Passing Reading\"].map(\"{:.0f}\".format),\n",
+    "    \"% Overall Passing\" : per_school_summary_df.groupby([\"School Size\"]).mean()[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "})\n",
+    "size_summary_df"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
