--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -1422,9 +1422,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 65,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "            Average Math Score Average Reading Score % Passing Math  \\\nSchool Type                                                           \nCharter                   83.5                  83.9             94   \nDistrict                  77.0                  81.0             67   \n\n            % Passing Reading % Overall Passing  \nSchool Type                                      \nCharter                    97                90  \nDistrict                   81                54  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Average Math Score</th>\n      <th>Average Reading Score</th>\n      <th>% Passing Math</th>\n      <th>% Passing Reading</th>\n      <th>% Overall Passing</th>\n    </tr>\n    <tr>\n      <th>School Type</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Charter</th>\n      <td>83.5</td>\n      <td>83.9</td>\n      <td>94</td>\n      <td>97</td>\n      <td>90</td>\n    </tr>\n    <tr>\n      <th>District</th>\n      <td>77.0</td>\n      <td>81.0</td>\n      <td>67</td>\n      <td>81</td>\n      <td>54</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create and format Type Summary DataFrame.\n",
+    "type_summary_df = pd.DataFrame({\n",
+    "    \"Average Math Score\" : per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"].map(\"{:.1f}\".format),\n",
+    "    \"Average Reading Score\" : per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"].map(\"{:.1f}\".format),\n",
+    "    \"% Passing Math\" : per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"].map(\"{:.0f}\".format),\n",
+    "    \"% Passing Reading\" : per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"].map(\"{:.0f}\".format),\n",
+    "    \"% Overall Passing\" : per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "})\n",
+    "type_summary_df"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
